Try to fix codesearch spacing on non-Retina.

--- a/sass/codesearch.scss
+++ b/sass/codesearch.scss
@@ -25,9 +25,6 @@
 /* Whitespace in header */ .sandbar {
   height: 0px !important;
 }
-/* Content below header whitespace (stale?) */ .a-a {
-  top: -132px !important;
-}
 /* Page border (Code page) */ .g-J,
 /* Page border (Search results page) */ .x-i {
   border: 0px !important;
